영진진 텍스트 수정정

--- a/src/styles/Warning.scss
+++ b/src/styles/Warning.scss
@@ -95,6 +95,7 @@
             display: flex;
             width: 150px;
             height: 60px;
+            padding: 0 10%;
             justify-content: center;
             align-items: center;
             border-radius: 11px;
