--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -638,6 +638,9 @@
               wddth: 100%;
               tr {
                 td {
+                  &:nth-child(2){
+                    width: 200px;
+                  }
                   color: #2f2f2f;
                   text-align: center;
                   font-size: 18px;
