--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,77 @@
-@font-face {
-  font-family: "pretendard400";
-  src: url("./assets/fonts/pretendard400.otf");
+/* @font-face {
+  font-family: "Pretendard";
+  src: url("./assets/fonts/Pretendard-ExtraLight.woff");
 }
 @font-face {
-  font-family: "pretendard500";
-  src: url("./assets/fonts/pretendard500.otf");
+  font-family: "Pretendard400";
+  src: url("./assets/fonts/Pretendard-ExtraLight.woff");
+} */
+@font-face {
+  font-family: 'Pretendard400';
+  src: url('./assets/fonts/Pretendard-Light.woff');
 }
 @font-face {
-  font-family: "spoqaHanSansNeo400";
-  src: url("./assets/fonts/SpoqaHanSansNeo400.otf");
+  font-family: 'Pretendard600';
+  src: url('./assets/fonts/Pretendard-Regular.woff');
 }
 @font-face {
-  font-family: "spoqaHanSansNeo500";
-  src: url("./assets/fonts/SpoqaHanSansNeo500.otf");
+  font-family: 'Pretendard700';
+  src: url('./assets/fonts/Pretendard-Bold.woff');
+}
+
+/* @font-face {
+  font-family: Pretendard;
+  src: url("./assets/fonts/Pretendard-ExtraLight.woff");
 }
 @font-face {
-  font-family: "spoqaHanSansNeo600";
-  src: url("./assets/fonts/SpoqaHanSansNeo600.otf");
+  font-family: Pretendard400;
+  src: url("./assets/fonts/Pretendard-ExtraLight.woff");
+} */
+@font-face {
+  font-family: Pretendard400;
+  src: url('./assets/fonts/Pretendard-Light.woff');
 }
 @font-face {
-  font-family: "spoqaHanSansNeo700";
-  src: url("./assets/fonts/SpoqaHanSansNeo700.otf");
+  font-family: Pretendard;
+  src: url('./assets/fonts/Pretendard-Light.woff');
 }
 @font-face {
-  font-family: "worksans400";
-  src: url("./assets/fonts/worksans400.ttf");
+  font-family: Pretendard500;
+  src: url('./assets/fonts/Pretendard-Regular.woff');
 }
 @font-face {
-  font-family: "worksans500";
-  src: url("./assets/fonts/worksans500.ttf");
+  font-family: Pretendard600;
+  src: url('./assets/fonts/Pretendard-Regular.woff');
 }
 @font-face {
-  font-family: "worksans600";
-  src: url("./assets/fonts/worksans600.ttf");
+  font-family: Pretendard700;
+  src: url('./assets/fonts/Pretendard-Bold.woff');
 }
+
 @font-face {
-  font-family: "worksans700";
-  src: url("./assets/fonts/worksans700.ttf");
+  font-family: 'Digital Numbers';
+  src: url('./assets/fonts/DigitalNumbers-Regular.ttf');
 }
-@font-face {
-  font-family: "inter800";
-  src: url("./assets/fonts/Inter-ExtraBold.ttf");
-}
+
 html,
 body {
   width: 100%;
   height: 100%;
-  background-color: #f5f5f5;
+  background-color: #121212;
   position: relative;
+}
+#root {
+  background: #121212;
 }
 * {
   margin: 0px;
   padding: 0px;
   border: 0px;
   text-decoration: none;
-  font-family: "spoqaHanSansNeo400";
-  color: #2f2f2f;
+  color: #fff;
   box-sizing: border-box;
   font-size: 16px;
+  font-family: 'Pretendard600';
 }
 *:focus {
   outline: 0;
@@ -77,6 +91,24 @@ a {
 
 button {
   cursor: pointer;
+  background: transparent;
+  color: #fff;
+}
+
+input {
+  width: 100%;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+  border: 1px solid var(--Color-05, #565656);
+  color: #fff;
+  font-family: Pretendard600;
+  font-size: 12px;
+  font-style: normal;
+  line-height: normal;
+  background: transparent;
 }
 
 input {
@@ -86,13 +118,29 @@ input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button {
   appearance: none;
 }
-input[type="submit"] {
+input[type='submit'] {
   cursor: pointer;
 }
 img {
   display: block;
 }
-.App{
-  max-width: 1920px;
+.App {
   margin: 0 auto;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: #1f1f1f;
+}
+::-webkit-scrollbar-thumb {
+  background: #353535;
+  border-radius: 10px;
+  border: 4px solid #1f1f1f;
+  /* background-clip: padding-box; */
+}
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+  width: 5px;
 }
