상훈 feat : 마이페이지 제작추가중

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1,27 +1,26 @@
-body{
-  background:#121212;
+body {
+  background: #121212;
 }
 
-
-.main{
+.main {
   padding: 70px 16px;
-  .main__inner{
+  .main__inner {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-  }//main__inner--END--
+  } //main__inner--END--
 
-  .earn__tab{
+  .earn__tab {
     width: 100%;
     display: flex;
     align-items: center;
     margin: 40px 0;
     gap: 16px;
-    .earn__tab__item{
+    .earn__tab__item {
       display: flex;
       align-items: center;
       justify-content: center;
-      color:#888;
+      color: #888;
       font-family: Pretendard600;
       font-size: 16px;
       font-style: normal;
@@ -30,11 +29,11 @@ body{
       height: 44px;
       position: relative;
       transition: 0.3s;
-      &::after{
-        content: '';
+      &::after {
+        content: "";
         display: block;
         position: absolute;
-        bottom:0;
+        bottom: 0;
         left: 50%;
         width: 0%;
         height: 1px;
@@ -42,24 +41,18 @@ body{
         opacity: 0;
         transition: 0.3s;
       }
-      &:hover{
+      &:hover {
         color: #fff;
       }
-      &.active{
+      &.active {
         color: #fff;
-        &::after{
+        &::after {
           left: 0;
           width: 100%;
           opacity: 1;
           background: #fff;
         }
       }
-    }//earn__tab__item--END--
-  }//earn__tab--END--
-
-
-}//main--END--
-
-
-
-
+    } //earn__tab__item--END--
+  } //earn__tab--END--
+} //main--END--
