--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -192,4 +192,105 @@
       width: 100%;
     }
   }
+  .mypage__ai-status {
+    margin-top: 100px;
+    .ai-status__title {
+      margin-bottom: 24px;
+      color: var(--primary-base, #cf0);
+      font-family: Orbitron;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      letter-spacing: 0.72px;
+    }
+    .ai-status__menu {
+      width: 566px;
+      display: flex;
+      padding: 6px;
+      align-items: flex-start;
+      gap: 12px;
+      border-radius: 12px;
+      border: 1px solid var(--Color-03, #222);
+      margin-bottom: 24px;
+      .ai-status__menu-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-items: center;
+        color: var(--Text-music-un, #565656);
+        font-family: Orbitron;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 100%; /* 14px */
+        letter-spacing: 0.42px;
+        padding: 8px 12px;
+      }
+      .active {
+        padding: 8px 12px;
+        gap: 8px;
+        border-radius: 12px;
+        background: var(--secondary-base, #00ffb3);
+      }
+    }
+    .ai-status__info {
+      display: flex;
+      justify-content: space-between;
+      .ai-status__chart {
+        width: 50%;
+        img {
+          object-fit: cover;
+        }
+      }
+    }
+    .ai-status__detail {
+      width: 50%;
+      .ai-status__detail-title {
+        color: var(--primary-base, #cf0);
+        font-family: Orbitron;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.54px;
+        margin-bottom: 14px;
+      }
+      .ai-status__detail-box {
+        .ai-status__detail-item {
+          display: flex;
+          margin-bottom: 12px;
+          .detail-item__title {
+            display: flex;
+            width: 140px;
+            padding: 8px 12px;
+            justify-content: center;
+            align-items: center;
+            align-self: stretch;
+            border-radius: 6px 0px 0px 6px;
+            border-top: 1px solid var(--Color-03, #222);
+            border-bottom: 1px solid var(--Color-03, #222);
+            border-left: 1px solid var(--Color-03, #222);
+            background: var(--Color-03, #222);
+          }
+          .detail-item__value {
+            width: 100%;
+            display: flex;
+            padding: 8px 12px;
+            align-items: center;
+            border-radius: 0px 6px 6px 0px;
+            border-top: 1px solid var(--Color-03, #222);
+            border-right: 1px solid var(--Color-03, #222);
+            border-bottom: 1px solid var(--Color-03, #222);
+            color: var(--Text-music-sub, #aaa);
+            font-family: Inter;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%; /* 14px */
+          }
+        }
+      }
+    }
+  }
 }
