--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -11,10 +11,10 @@
             margin-bottom: 12px;
         }
         .wrap-content {
-            // display: grid;
-            // grid-template-columns: repeat(4, 1fr);
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            // display: flex;
+            // justify-content: space-between;
             align-items: center;
         }
     }
